fix: Change body overflow property to prevent horizontal scrolling

--- a/src/assets/css/globals.css
+++ b/src/assets/css/globals.css
@@ -26,5 +26,5 @@
 }
 
 body {
-    overflow: hidden;
+    overflow-x: hidden;
 }
